borrow-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: borrow-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: borrow
  template:
    metadata:
      labels:
        app: borrow
    spec:
      containers:
         - name: borrow-container
           image: manisha03b/pythonapp:borrowimage
           ports:
             - containerPort: 5003
           resources:
              requests:
                cpu: "100m"
                memory: "128Mi"
              limits:
                cpu: "500m"
                memory: "256Mi"
