app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP 
      port: 5000
      targetPort: 5000
  type: ClusterIP
