ingress.yml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: pythonapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-service
              port:
                number: 5000
